fix: color contrast in search history

--- a/src/main/webapp/resources/learnweb/sass/components/_search-history.scss
+++ b/src/main/webapp/resources/learnweb/sass/components/_search-history.scss
@@ -116,7 +116,7 @@
         }
       }
 
-      background: var(--body-color);
+      background: var(--tertiary-bg);
     }
   }
 }
